--- a/css/site.css
+++ b/css/site.css
@@ -34,7 +34,7 @@ h1 {
   left: 0;
   right: 0;
   margin: 0 auto;
-  top: 30px;
+  top: 70px;
 }
 #section1 h1,
 #section1 p {
@@ -91,6 +91,7 @@ h1 {
   -webkit-border-radius: 10px;
   border-radius: 10px;
   float: right;
+  margin-right: 10%;
 }
 #menu li.active {
   background: #666;
@@ -126,7 +127,7 @@ nav {
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
 }
-nav h1 {
+nav h2 {
   float: left;
-  font-size: 3em;
+  margin-left: 10%;
 }
