--- a/css/site.less
+++ b/css/site.less
@@ -39,7 +39,7 @@
   		left: 0;
   		right: 0;
   		margin: 0 auto;
-  		top: 30px;
+  		top: 70px;
   	}
   	h1, p{
   		text-shadow: 1px 5px 20px #000;
@@ -66,7 +66,6 @@
   	background-image: url(../images/bg3.jpg);
   	padding: 6% 0 0 0;
   	margin: 0 auto;
-
   	h1{
   		color: #000;
   	}
@@ -102,6 +101,7 @@
   	-webkit-border-radius: 10px;
   	border-radius: 10px;
   	float: right;
+    margin-right:10%;
   }
   #menu li.active{
   	background:#666;
@@ -138,9 +138,9 @@
   	margin:0;
   	width: 100%;
   	background: rgba(0,0,0, 0.4);	
-
-  	h1{
+  	h2{
   		float: left;
+      margin-left: 10%;
   	}
   }
 
