first section more or less finished

--- a/css/site.css
+++ b/css/site.css
@@ -34,11 +34,14 @@ h1 {
   left: 0;
   right: 0;
   margin: 0 auto;
-  top: 70px;
+  top: 30%;
 }
 #section1 h1,
 #section1 p {
   text-shadow: 1px 5px 20px #000;
+}
+#section1 p {
+  font-size: larger;
 }
 #section2 {
   background-image: url(../images/bg2.jpg);
@@ -56,7 +59,7 @@ h1 {
   text-shadow: 1px 5px 20px #000;
 }
 #section3 {
-  background-image: url(../images/bg3.jpg);
+  background-image: url(../images/bg1.jpg);
   padding: 6% 0 0 0;
   margin: 0 auto;
 }
@@ -90,8 +93,9 @@ h1 {
   background: rgba(255, 255, 255, 0.5);
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  float: right;
   margin-right: 10%;
+  float: right;
+  margin-top: 10px;
 }
 #menu li.active {
   background: #666;
@@ -130,4 +134,13 @@ nav {
 nav h2 {
   float: left;
   margin-left: 10%;
+  margin-top: 13px;
+}
+/*bootstrap overrides*/
+.btn-success {
+  letter-spacing: 0.75px;
+  font-weight: 100;
+}
+.navbar-right {
+  margin-right: 0;
 }
