--- a/css/site.less
+++ b/css/site.less
@@ -39,11 +39,16 @@
   		left: 0;
   		right: 0;
   		margin: 0 auto;
-  		top: 70px;
+  		top: 30%;
   	}
   	h1, p{
   		text-shadow: 1px 5px 20px #000;
   	}
+    p{
+      font-size: larger;
+    }
+
+
   }
 
   #section2{
@@ -63,7 +68,7 @@
   }
 
   #section3{
-  	background-image: url(../images/bg3.jpg);
+  	background-image: url(../images/bg1.jpg);
   	padding: 6% 0 0 0;
   	margin: 0 auto;
   	h1{
@@ -100,8 +105,9 @@
   	background: rgba(255,255,255, 0.5);
   	-webkit-border-radius: 10px;
   	border-radius: 10px;
-  	float: right;
     margin-right:10%;
+    float: right;
+    margin-top: 10px;
   }
   #menu li.active{
   	background:#666;
@@ -141,6 +147,18 @@
   	h2{
   		float: left;
       margin-left: 10%;
+      margin-top:13px;
   	}
   }
+
+/*bootstrap overrides*/
+.btn-success{
+  letter-spacing: 0.75px;
+  font-weight:100;
+}
+.navbar-right{
+  margin-right: 0;
+}
+
+
 
