--- a/css/site.less
+++ b/css/site.less
@@ -90,6 +90,22 @@
 
 	}
 
+  /* Section 5
+   * --------------------------------------- */
+   #section5{
+    background-color: #e7e8ec;
+    p, h1{
+    color:#000;
+    }
+    p{
+      font-size: large;
+    }
+    h1{
+      margin-top: 20px;
+    }
+    img{ width: 30%;}
+   }
+
   #infoMenu li a{
   	color: #fff;
   }
